--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,7 +7,7 @@ services:
     environment:
       - GHOSTNET_SERVER_IP=0.0.0.0
       - GHOSTNET_SERVER_PORT=53
-      - GHOSTNET_ENCRYPTION_KEY=${GHOSTNET_ENCRYPTION_KEY:-test-key-32-chars-long-1234567890}
+      - GHOSTNET_ENCRYPTION_KEY=${GHOSTNET_ENCRYPTION_KEY:-standard-test-key-32-chars-long!}
     ports:
       - "53:53/udp"
     networks:
